--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <section>
 
 <h3>
-<p class="view"><a href="https://tomurell.github.io/rings">1/ p5.js example 1 // Feb07_2016</a></h3>
+<p class="view"><a href="https://tomurell.github.io/rings">RINGS: p5.js particle example</a></h3>
 
           <a href="https://tomurell.github.io/rings"> <img src="take2.png" alt="project screenshot" style="width:500px;height:281px;"> </a>
 
           
-<p>Here's where a description of this project goes. Click image above to access example.</p>
+<p>This piece uses particles and attractors to explore drawing with p5.js. Click anywhere in the frame to create particles, watch as the fly around. Rinse + repeat.</p>
 
 
 <p>
