--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
       <section>
 
 <h3>
+<p class="view"><a href="https://tomurell.github.io/bubbles">BUBBLES: p5.js packed bubbles example</a></h3>
+
+          <a href="https://tomurell.github.io/bubbles"> <img src="bubbles.png" alt="project screenshot" style="width:500px;height:281px;"> </a>
+
+          
+<p>Here's the first stab at the packed bubbles assignment for the crunchbase data in the p5.js class. Bubbles are scaled to investment amount, colored by category, and will blow up and display labels on mouseover.</p>
+
+
+<p>
+          
+          </p>
+
+
+<h3>
 <p class="view"><a href="https://tomurell.github.io/rings">RINGS: p5.js particle example</a></h3>
 
           <a href="https://tomurell.github.io/rings"> <img src="take2.png" alt="project screenshot" style="width:500px;height:281px;"> </a>
